src/objects/Claim__c.object
<CustomObject>
    <fields>
        <fullName>ICA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ICA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identified_Suspect_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Identified Suspect Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Information_Release_Authorized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Information Release Authorized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invest_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Invest Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Investigated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investigated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investigations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Investigation_Docket_Number__c</fullName>
        <label>Investigation/Docket Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <label>LOB</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Affinity Programs</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Fleet Billed Cobrand</fullName>
                </value>
                <value>
                    <fullName>Fleet One, LLC</fullName>
                </value>
                <value>
                    <fullName>GSA</fullName>
                </value>
                <value>
                    <fullName>MasterCard</fullName>
                </value>
                <value>
                    <fullName>Pacific Pride</fullName>
                </value>
                <value>
                    <fullName>Partner Billed Cobrand</fullName>
                </value>
                <value>
                    <fullName>Private Label</fullName>
                </value>
                <value>
                    <fullName>Quicktrip Revolver</fullName>
                </value>
                <value>
                    <fullName>Roadsmith</fullName>
                </value>
                <value>
                    <fullName>Universal</fullName>
                </value>
                <value>
                    <fullName>WEX Business Card</fullName>
                </value>
                <value>
                    <fullName>WEX Direct</fullName>
                </value>
                <value>
                    <fullName>WEX Revolver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Law_Enforcement_Report_Filed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Law Enforcement Report Filed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Letter_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Letter Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketer_Adjustment_Code__c</fullName>
        <label>Marketer-Adjustment Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AH - Goodwill Write Off</fullName>
                </value>
                <value>
                    <fullName>AJ - Operational Error (Systems error)</fullName>
                </value>
                <value>
                    <fullName>AK - Write Off due to Fraud</fullName>
                </value>
                <value>
                    <fullName>AW - Write off due to Relationship Issues</fullName>
                </value>
                <value>
                    <fullName>AX - Internal Error (Human error)</fullName>
                </value>
                <value>
                    <fullName>Multiple Codes Used</fullName>
                </value>
                <value>
                    <fullName>Recourse 92</fullName>
                </value>
                <value>
                    <fullName>Recourse to Collection Agency</fullName>
                </value>
                <value>
                    <fullName>RELAT- Relationship</fullName>
                </value>
                <value>
                    <fullName>SMBAL- Small Balance WO</fullName>
                </value>
                <value>
                    <fullName>WEX Recovery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketer_Loss__c</fullName>
        <label>Marketer Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketer__c</fullName>
        <label>Marketer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>0201 - Conoco 76 Fleet</fullName>
                </value>
                <value>
                    <fullName>0202 - Phillips 66 Fleet</fullName>
                </value>
                <value>
                    <fullName>0203 - Conoco Fleet</fullName>
                </value>
                <value>
                    <fullName>0401 to 0459 - WEX</fullName>
                </value>
                <value>
                    <fullName>0452 - Heavy Truck Program</fullName>
                </value>
                <value>
                    <fullName>0452 - Racetrac Elite</fullName>
                </value>
                <value>
                    <fullName>0453 - Affinity II Partners</fullName>
                </value>
                <value>
                    <fullName>0453 - ARI</fullName>
                </value>
                <value>
                    <fullName>0454 - Affinity I Partners</fullName>
                </value>
                <value>
                    <fullName>0460 - GECFS</fullName>
                </value>
                <value>
                    <fullName>0461 - American Car Care Centers</fullName>
                </value>
                <value>
                    <fullName>0461 - Speedway Business Fleet</fullName>
                </value>
                <value>
                    <fullName>0462 - Fleetmark</fullName>
                </value>
                <value>
                    <fullName>0462 - Speedway Business Universal</fullName>
                </value>
                <value>
                    <fullName>0463 - Enterprise</fullName>
                </value>
                <value>
                    <fullName>0464 - Sinclair Oil</fullName>
                </value>
                <value>
                    <fullName>0465 - Leasing Assoc</fullName>
                </value>
                <value>
                    <fullName>0466 - GE Dealer</fullName>
                </value>
                <value>
                    <fullName>0467 - ARI</fullName>
                </value>
                <value>
                    <fullName>0468 - CitiCapital</fullName>
                </value>
                <value>
                    <fullName>0469 - Wheels</fullName>
                </value>
                <value>
                    <fullName>0470 - CSC</fullName>
                </value>
                <value>
                    <fullName>0471 - Mike Albert</fullName>
                </value>
                <value>
                    <fullName>0472 - Parts Plus</fullName>
                </value>
                <value>
                    <fullName>0473 - Element</fullName>
                </value>
                <value>
                    <fullName>0474 - Emkay (ITS Compliance)</fullName>
                </value>
                <value>
                    <fullName>0475 - CitiCapital (ATT)</fullName>
                </value>
                <value>
                    <fullName>0475 - Idealease</fullName>
                </value>
                <value>
                    <fullName>0476 - Murphy Oil</fullName>
                </value>
                <value>
                    <fullName>0477 - Grease Monkey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Merchant_Adjustment_Code__c</fullName>
        <label>Merchant-Adjustment Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01 Not Received</fullName>
                </value>
                <value>
                    <fullName>02 Duplicate Sale</fullName>
                </value>
                <value>
                    <fullName>04 No Signature</fullName>
                </value>
                <value>
                    <fullName>05 Incorrect Sale Amount</fullName>
                </value>
                <value>
                    <fullName>06 Unauthorized Use / Fraud</fullName>
                </value>
                <value>
                    <fullName>07 Transaction Correction</fullName>
                </value>
                <value>
                    <fullName>08 Sale After Suspension</fullName>
                </value>
                <value>
                    <fullName>09 No Authorization</fullName>
                </value>
                <value>
                    <fullName>10 Uncollectable</fullName>
                </value>
                <value>
                    <fullName>17 Keyed Sale, No Imprint</fullName>
                </value>
                <value>
                    <fullName>18 Non Fuel on Fuel Only</fullName>
                </value>
                <value>
                    <fullName>19 Ticket Copy not Legible</fullName>
                </value>
                <value>
                    <fullName>20 Authorization not Valid</fullName>
                </value>
                <value>
                    <fullName>21 Age of Transaction</fullName>
                </value>
                <value>
                    <fullName>22 Incomplete Purchase Info</fullName>
                </value>
                <value>
                    <fullName>23 Card Not Present</fullName>
                </value>
                <value>
                    <fullName>24 Collusion</fullName>
                </value>
                <value>
                    <fullName>25 Handwritten Ticket</fullName>
                </value>
                <value>
                    <fullName>26 Sale Exceeds Purchase Limit</fullName>
                </value>
                <value>
                    <fullName>27 Unauthorized Merchandise</fullName>
                </value>
                <value>
                    <fullName>Multiple Codes Used</fullName>
                </value>
                <value>
                    <fullName>PlusChek/Dispute/Void</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Merchant_Site_Loss__c</fullName>
        <label>Merchant/Site Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Money_Code_Number_s__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Money Code Number(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Money_Code_Payee__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Money Code Payee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Card__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Card #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_ReD_Alerts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No ReD Alerts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Origination_Point_EFS__c</fullName>
        <label>Origination Point</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Activation</fullName>
                </value>
                <value>
                    <fullName>Cobrand Partner</fullName>
                </value>
                <value>
                    <fullName>Customer Initiated</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>D&amp;B High Risk Notification</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Fleet Initiated</fullName>
                </value>
                <value>
                    <fullName>Fraud Dept</fullName>
                </value>
                <value>
                    <fullName>FSC</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Internal Partner</fullName>
                </value>
                <value>
                    <fullName>Local Authorities</fullName>
                </value>
                <value>
                    <fullName>Marketer</fullName>
                </value>
                <value>
                    <fullName>Merchant</fullName>
                </value>
                <value>
                    <fullName>Outside Sales</fullName>
                </value>
                <value>
                    <fullName>Premium Fleet</fullName>
                </value>
                <value>
                    <fullName>RSLPO</fullName>
                </value>
                <value>
                    <fullName>Site Team</fullName>
                </value>
                <value>
                    <fullName>SPC</fullName>
                </value>
                <value>
                    <fullName>Speedpass</fullName>
                </value>
                <value>
                    <fullName>WEX Legal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Origination_Point__c</fullName>
        <label>Origination Point</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Activation</fullName>
                </value>
                <value>
                    <fullName>Cobrand Partner</fullName>
                </value>
                <value>
                    <fullName>Customer Initiated</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>D&amp;B High Risk Notification</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Fleet Initiated</fullName>
                </value>
                <value>
                    <fullName>Fraud Dept</fullName>
                </value>
                <value>
                    <fullName>FSC</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Internal Partner</fullName>
                </value>
                <value>
                    <fullName>Local Authorities</fullName>
                </value>
                <value>
                    <fullName>Marketer</fullName>
                </value>
                <value>
                    <fullName>Merchant</fullName>
                </value>
                <value>
                    <fullName>Outside Sales</fullName>
                </value>
                <value>
                    <fullName>Premium Fleet</fullName>
                </value>
                <value>
                    <fullName>RSLPO</fullName>
                </value>
                <value>
                    <fullName>Site Team</fullName>
                </value>
                <value>
                    <fullName>SPC</fullName>
                </value>
                <value>
                    <fullName>Speedpass</fullName>
                </value>
                <value>
                    <fullName>WEX Legal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Recovery_Amt__c</fullName>
        <label>&quot;Other&quot; Recovery Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Recovery_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>&quot;Other&quot; Recovery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PFS_Rep_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PFS Rep Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Claim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Claim</label>
        <referenceTo>Claim__c</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Formal_Name__c</fullName>
        <label>Partner Formal Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>76 Fleet</fullName>
                </value>
                <value>
                    <fullName>7-Eleven/WEX</fullName>
                </value>
                <value>
                    <fullName>ACCC/WEX</fullName>
                </value>
                <value>
                    <fullName>Allstate/WEX</fullName>
                </value>
                <value>
                    <fullName>ALON</fullName>
                </value>
                <value>
                    <fullName>AMI/WEX</fullName>
                </value>
                <value>
                    <fullName>ARI</fullName>
                </value>
                <value>
                    <fullName>Camp Oil</fullName>
                </value>
                <value>
                    <fullName>Cenex</fullName>
                </value>
                <value>
                    <fullName>Chevron and Texaco Business Access</fullName>
                </value>
                <value>
                    <fullName>Circle K/WEX</fullName>
                </value>
                <value>
                    <fullName>Citgo</fullName>
                </value>
                <value>
                    <fullName>Clark</fullName>
                </value>
                <value>
                    <fullName>Coastal</fullName>
                </value>
                <value>
                    <fullName>Conoco</fullName>
                </value>
                <value>
                    <fullName>Crown/WEX</fullName>
                </value>
                <value>
                    <fullName>CSC/WEX</fullName>
                </value>
                <value>
                    <fullName>Dillon</fullName>
                </value>
                <value>
                    <fullName>Dodge Business Link/WEX</fullName>
                </value>
                <value>
                    <fullName>Element</fullName>
                </value>
                <value>
                    <fullName>Enterprise/WEX</fullName>
                </value>
                <value>
                    <fullName>ExxonMobil</fullName>
                </value>
                <value>
                    <fullName>EZ Mart</fullName>
                </value>
                <value>
                    <fullName>E-Z Mart</fullName>
                </value>
                <value>
                    <fullName>Farm Credit/WEX</fullName>
                </value>
                <value>
                    <fullName>Fina</fullName>
                </value>
                <value>
                    <fullName>Fleetistics Fuel Card</fullName>
                </value>
                <value>
                    <fullName>Fleetmark/WEX</fullName>
                </value>
                <value>
                    <fullName>Fleet One, LLC (Local)</fullName>
                </value>
                <value>
                    <fullName>Fleet One, LLC (OTR)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personnel_Taking_Report_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Personnel Taking Report #1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personnel_Taking_Report_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Personnel Taking Report #2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CHAN</fullName>
                </value>
                <value>
                    <fullName>MEMPHIS</fullName>
                </value>
                <value>
                    <fullName>OGDEN</fullName>
                </value>
                <value>
                    <fullName>PINNACLE</fullName>
                </value>
                <value>
                    <fullName>PNC BANK</fullName>
                </value>
                <value>
                    <fullName>SHELL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Options__c</fullName>
        <label>Product Options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>MC</fullName>
                </value>
                <value>
                    <fullName>Pinnacle</fullName>
                </value>
                <value>
                    <fullName>PNC</fullName>
                </value>
                <value>
                    <fullName>Proprietary</fullName>
                </value>
                <value>
                    <fullName>Shell</fullName>
                </value>
                <value>
                    <fullName>Smart Funds</fullName>
                </value>
                <value>
                    <fullName>T-check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Platform__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>6.5 MasterCard</fullName>
                </value>
                <value>
                    <fullName>MasterCard</fullName>
                </value>
                <value>
                    <fullName>Money Code</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>Proprietary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Account_For_Email_Merge__c</fullName>
        <formula>Case__r.Ext_Int_Account_Numbers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Account # For Email Merge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Account_Masked__c</fullName>
        <formula>RIGHT(Program_Account__c , 7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Account # Masked</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Account__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Account #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prosecution_Assistance_By_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prosecution Assistance By Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provisional_Credit_Amount__c</fullName>
        <formula>IF( Provisional_Credit__c = true,  Allowable_Dispute_Dollars__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provisional Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Provisional_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provisional Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recovery_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recovery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recovery_From__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recovery From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recovery_Trans_Count__c</fullName>
        <label>Recovery Trans Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Number_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Report Number #1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Number_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Report Number #2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_To_Law_Enforcement_By_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reported To Law Enforcement By Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution_EFS__c</fullName>
        <label>Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closed - Claim Dismissed</fullName>
                </value>
                <value>
                    <fullName>Closed - Customer Liable</fullName>
                </value>
                <value>
                    <fullName>Closed - Duplicate</fullName>
                </value>
                <value>
                    <fullName>Closed - Full Chargeoff</fullName>
                </value>
                <value>
                    <fullName>Closed - Full Recovery</fullName>
                </value>
                <value>
                    <fullName>Closed - No Contact</fullName>
                </value>
                <value>
                    <fullName>Closed - No Loss</fullName>
                </value>
                <value>
                    <fullName>Closed - Partial Chargeoff</fullName>
                </value>
                <value>
                    <fullName>Closed - Partial Chargeoff / Partial Recovery</fullName>
                </value>
                <value>
                    <fullName>Closed - Partial Recovery</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Pending - Arbitration</fullName>
                </value>
                <value>
                    <fullName>Pending - Chargeoff</fullName>
                </value>
                <value>
                    <fullName>Pending - Dispute Form / FMI</fullName>
                </value>
                <value>
                    <fullName>Pending - Investigation</fullName>
                </value>
                <value>
                    <fullName>Pending - Re-presentment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_Time_Frame__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Resolution Time Frame</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>App Fraud - Biz/PG ID Theft</fullName>
                </value>
                <value>
                    <fullName>Application Fraud</fullName>
                </value>
                <value>
                    <fullName>Closed - Claim Dismissed</fullName>
                </value>
                <value>
                    <fullName>Closed - Consolidated</fullName>
                </value>
                <value>
                    <fullName>Closed - Customer Liable</fullName>
                </value>
                <value>
                    <fullName>Closed - Duplicate</fullName>
                </value>
                <value>
                    <fullName>Closed - Fleet Not Disputing</fullName>
                </value>
                <value>
                    <fullName>Closed - Full Chargeoff</fullName>
                </value>
                <value>
                    <fullName>Closed - Full Recovery</fullName>
                </value>
                <value>
                    <fullName>Closed - No Contact</fullName>
                </value>
                <value>
                    <fullName>Closed - No Contact/Insufficient Info</fullName>
                </value>
                <value>
                    <fullName>Closed - No Loss</fullName>
                </value>
                <value>
                    <fullName>Closed - Partial Chargeoff</fullName>
                </value>
                <value>
                    <fullName>Closed - Partial Chargoff / Partial Recovery</fullName>
                </value>
                <value>
                    <fullName>Closed - Partial Recovery</fullName>
                </value>
                <value>
                    <fullName>Consumer Settlement</fullName>
                </value>
                <value>
                    <fullName>Credit Loss</fullName>
                </value>
                <value>
                    <fullName>Decline App - Fraud</fullName>
                </value>
                <value>
                    <fullName>Decline App - High Risk</fullName>
                </value>
                <value>
                    <fullName>Decline Application</fullName>
                </value>
                <value>
                    <fullName>Fleet</fullName>
                </value>
                <value>
                    <fullName>Fleet/Goodwill</fullName>
                </value>
                <value>
                    <fullName>Fleet/Marketer</fullName>
                </value>
                <value>
                    <fullName>Fleet/Merchant</fullName>
                </value>
                <value>
                    <fullName>Fleet/Merchant/WEX</fullName>
                </value>
                <value>
                    <fullName>Fleet/Transaction(s) too old</fullName>
                </value>
                <value>
                    <fullName>Fleet/WEX</fullName>
                </value>
                <value>
                    <fullName>FleetOne</fullName>
                </value>
                <value>
                    <fullName>Fleet Withdrew Dispute</fullName>
                </value>
                <value>
                    <fullName>Goodwill Write Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>